Fixed author section alignment

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -39,6 +39,7 @@ $header-padding-bottom: 1.5em !default;
     &.first {
       margin-left: 0;
       clear: both;
+      text-align: center;
     }
   }
 }
@@ -169,9 +170,6 @@ body.sidebar-footer {
 .author {
   margin-top: -30px;
   text-align: center;
-}
-.avatar {
-  margin-left: 35px;
 }
 
 @media only screen and (min-width: 992px) {
